SAK-21564 - First pass; moving pure-poms parents back to master, cleaning up most duplication.
git-svn-id: https://source.sakaiproject.org/svn/jsf/trunk@101783 66ffb92e-73f9-0310-93c1-f5514f145a0a